--- a/quiz/src/main/resources/templates/session2.html
+++ b/quiz/src/main/resources/templates/session2.html
@@ -3,23 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <title>문제 풀기!!</title>
+<style>
+	table {
+	width: 800px;
+	height: 800px;
+	border: 1px solid #000;
+}
+</style>
 </head>
 <body>
-	<ol>
-		<p>문제풀기</p>
-	</ol>
-	<ol>
-		<li>
-			<p id="tala1"></p>
-		</li>
-	</ol>
-	<ol>
-		<li>
-			<p id="tala2"></p>
-		</li>
-	</ol>
-	
-	
-	<p>정답은 : <label id="result"></label></p>
+	<form>
+		<table>
+			<th>
+				<p>문제풀기</p>
+			</th>
+			<th>
+				<td>
+					<p id="tala1">[[${naio1}]]</p>
+				</td>
+			</th>
+			<th>
+				<td>
+					<p id="tala2">[[${naio2}]]</p>
+				</td>
+			</th>
+			<br>
+			<th>
+				<p>정답은 : <label id="result"></label></p>
+				<input id="mon" type="button" value="문제받기">
+			</th>
+		</table>
+	</form>
 </body>
 </html>
