--- a/spring2/src/main/resources/templates/model1.html
+++ b/spring2/src/main/resources/templates/model1.html
@@ -3,45 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>model1.html</title>
-<script defer src="../mama.js"></script>
 </head>
 <body>
-	<h2>model 사용하기/ Thymeleaf</h2>
+	<h2>Model 사용하기 / Thymeleaf</h2>
 	
 	<p>[[${string}]]</p>
-	<p>[[${asdf}]]</p>
-	<p>[[${numb}]]</p>
-	<p>[[${p}]]</p>
-	<p>[[${numb + 1}]]</p>
-	<p>[[${p.name}]]</p>
-	
-	<!-- 내용중에 대괄호가 중복되지 않게 주의해야함!!! -->
-	<ol>
-		<p>어머니는 짜장면이 싫다고 하셧어</p>
-		<p>그래서 나는 짜장면을 곱배기로 먹었어</p>
-		<p>그런데 나는 더달라고 때를 부렸어</p>
-		<p>어머니는 짜장면이 싫다고 하셧어</p>
-		<br>
-		<br>
-		<p>문제 1 : 어머니는 짜장면이 왜 싫다고 하셧을까요?</p>
-	</ol>
-	<li>
-		<input type="button" id="qq" value="1">
-		<p>짜장면이 비싸서</p>
-	</li>
-	<li>
-		<input type="button" id="ww" value="2">
-		<p>내가 엄청 먹어서</p>
-	</li>
-	<li>
-		<input type="button" id="ee" value="3">
-		<p>맛없는 가게라서</p>
-	</li>
-	<li>
-		<input type="button" id="rr" value="4">
-		<p>집이 가난해서</p>
-	</li>
-	<p>정답은 : <label id="result"></label></p>
-	
+	<p>[[${abcd}]]</p>
+	<p>[[${number}]]</p>
+	<p>[[${person}]]</p>
+	<p>[[${number + 1}]]</p>
+	<p>[[${person.name}]]</p>
 </body>
 </html>
