--- a/spring2/src/main/resources/templates/home.html
+++ b/spring2/src/main/resources/templates/home.html
@@ -25,10 +25,18 @@
 			<li><a href="ss/session4">Session에 "id"값이 있는 경우만 접속 가능</a></li>
 		</ul>
 		</li>
+		<li>쿠키 사용
+		<ul>
+			<li><a href="ck/cookie1">쿠키 저장</a></li>
+			<li><a href="ck/cookie2">쿠키 삭제</a></li>
+			<li><a href="ck/cookie3">쿠키 읽기</a></li>
+		</ul>
+		</li>
 		<li>예제
 		<ul>
 			<li><a href="ex/calc">계산</a></li>
 			<li><a href="ex/info">개인정보입력</a></li>
+			<li><a href="ck/cookie">방문횟수 확인</a></li>
 		</ul>
 		</li>
 	</ol>
