--- a/quiz/src/main/resources/templates/session1.html
+++ b/quiz/src/main/resources/templates/session1.html
@@ -14,21 +14,17 @@
 		<ol>
 			<li>
 				<p>질문을 작성해 주세요</p><br>
-				<textarea id="naio1" name="naio1" placeholder="퀴즈를 입력해 주세요." style="width: 800px; height: 300px; resize: none;" ></textarea>
-				<ol>
-					<input id="br" type="button" value="다음줄">
-				</ol>
+				<textarea id="naio1" name="naio1" placeholder="퀴즈를 입력해 주세요." onkeypress="enterkey(e)" style="width: 800px; height: 300px; resize: none;" ></textarea>
 			</li>
 		</ol>
 		<input type="hidden" id="he" value="0">
 		<ol>
 			<li>
 				<p>내용 및 문제를작성해 주세요</p><br>
-				<textarea id="naio2" name="naio2" placeholder="내용을 입력해 주세요." style="width: 800px; height: 300px; resize: none;" ></textarea>
+				<textarea id="naio2" name="naio2" placeholder="내용을 입력해 주세요." onkeypress="enterkey(e)" style="width: 800px; height: 300px; resize: none;" ></textarea>
 				<p>정답번호를 입력하세요 : <input id = "sekai" name="sekai" type="text"></p>
 			</li>
 			<ol>
-				<input id="br1" type="button" value="다음줄">
 				<input id="mun" type="button" value="문제출제">
 				<input id="totod" type="submit" value="작성완료">
 				<a href="/quiz">돌아가기</a>
