--- a/spring2/src/main/resources/templates/home.html
+++ b/spring2/src/main/resources/templates/home.html
@@ -32,6 +32,18 @@
 			<li><a href="ck/cookie3">쿠키 읽기</a></li>
 		</ul>
 		</li>
+		<li>Lombok & Logger 사용
+		<ul>
+			<li><a href="log/lombok">Lombok 사용</a></li>
+			<li><a href="log/logger">Lombok & Logger 사용</a></li>
+		</ul>
+		</li>
+		<li>Thymeleaf
+		<ul>
+			<li><a href="th/thymeleaf1">타임리프1</a></li>
+			<li><a href="th/thymeleaf2">타임리프2</a></li>
+		</ul>
+		</li>
 		<li>예제
 		<ul>
 			<li><a href="ex/calc">계산</a></li>
@@ -42,10 +54,4 @@
 	</ol>
 	
 </body>
-
-
-
-
-
-
 </html>
