--- a/spring3/src/main/resources/templates/insert.html
+++ b/spring3/src/main/resources/templates/insert.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<h1>[ 저장 ]</h1>
-		<form action="insert" method="post">
-			<p>이름<input name ="name" type="text"></p>
-			<p>나이<input name ="age" type="number"></p>
+		<form action="insert1" method="post">
+			<p>이름<input required maxlength="20" name ="name" type="text"></p>
+			<p>나이<input name ="age" type="number" max="999"></p>
 			<p><input type="submit" value="저장"></p>
 		</form>
 </body>
