--- a/spring3/src/main/resources/templates/main.html
+++ b/spring3/src/main/resources/templates/main.html
@@ -8,10 +8,12 @@
 	<h1>僕の会社「頑張って！会社」</h1>
 	<h2>私の会社におかえりなさい！</h2>
 	<h2>金賞は１円です。</h2>
+	<h2>ぜひ、私の職員を使ってください。</h2>
+	<h2>でわ、よろしくおねがいします。</h2>
 	
 	<p><a href="./insert">저장</a></p>
-	<p><a href="./insert">조회</a></p>
+	<p><a href="./select">조회</a></p>
 	<p><a href="./insert">수정</a></p>
-	<p><a href="./insert">삭제</a></p>
+	<p><a href="./delete?name=a">삭제</a></p>
 </body>
 </html>
