--- a/spring7/src/main/resources/templates/join.html
+++ b/spring7/src/main/resources/templates/join.html
@@ -4,11 +4,21 @@
 <meta charset="UTF-8">
 <title>회원가입</title>
 <style>
-	table {
-	background-color: gray;
+	h2{
+		text-align:center;
 	}
-	th {
+	form{
+		text-align:center;
+	}
+	table {
+	margin-left:180px;
+	text-align:center;
+	background-color: gray;
+	border-radius: 10px;
+	}
+	td,th {
 	text-align: center;
+	
 	}
 </style>
 <script>
@@ -17,12 +27,13 @@ function idFormOpen(){
 	window.open('idcheck','win','left=600,top=500,width=600,height=500,menubar=no');
 	
 }
+
 </script>
 </head>
 <body>
 	<h2>[ 회원 가입 ]</h2>
-	<form th:action="@{member/insert}" method="post">
-	<table >
+	<form th:action="@{insert}" method="post">
+	<table>
 		<tr>
 			<th>id</th>
 			<td><input type="text" name="memberid" id="memberid" maxlength="10" placeholder="ID중복확인 이용" readonly="readonly"></td>
@@ -50,6 +61,7 @@ function idFormOpen(){
 			<td><input type="text" name="address" placeholder="주소 입력"></td>
 		</tr>
 	</table>
+	<br>
 		<input type="submit" value="확인">
 		<input type="reset" value="취소">
 	</form>
